updated first draft

--- a/index.html
+++ b/index.html
@@ -78,15 +78,6 @@ http://www.templatemo.com/tm-406-flex
 		        document.write(imgStr); document.close();
 		}
 
-		$(function(){
-		    $("#includeAbout").load("about.html");
-		    $("#includeProgram").load("program.html");
-		    $("#includeCall").load("call_for_papers.html");
-		    $("#includeOrganization").load("organization.html");
-		    $("#includeVenue").load("venue.html");
-		});
-
-
         </script>
     </head>
     <body>
@@ -130,14 +121,14 @@ http://www.templatemo.com/tm-406-flex
                                     <ul class="menu-first">
                                         <!--li class="active"><a href="#">Home</a></li-->
                                         <li><a href="#About">About</a></li>
+                                        <li><a href="#Keynotes">Keynotes</a></li>
                                         <li><a href="#Call">Call For papers</a></li>
                                         <li><a href="#Commitee">Organization Commitee</a></li>
                                         <li><a href="#Venue">Venue</a></li>
                                         <li><a href="#Program">Program</a></li>
-                                        <li><a href="#Program">Program</a></li>
                                         
                                         <!--li><a href="#" class="fa fa-twitter"></a></li-->
-                                        <li><a href="#Contact"><img src="images/twitter.png" width="36px" height="36px"></a></li>
+                                        <li><a href="https://twitter.com/ACMHT" target="_blank"><img src="images/twitter.png" width="36px" height="36px"></a></li>
                                     </ul>
                                 </div> <!-- /.main-menu -->
                             </div> <!-- /.row -->
@@ -169,7 +160,8 @@ http://www.templatemo.com/tm-406-flex
         </div> <!-- /.site-main -->
 
 
-        <div class="content-section" id="About" name="About">
+	<div class="content-section" id="About">
+		<a name="About"></a>
             <div class="container">
 
 	                <div class="row">
@@ -200,7 +192,7 @@ http://www.templatemo.com/tm-406-flex
 <span>Registration ends (Early bird rate): 24th July 2017</span><br />
 <span>Camera ready due:  21 July 2017</span><br />
 <p><strong>Conference:</strong> 13-15 September 2017</p>
-<p><em><strong>All the deadlines are at 23:59 <a href="https://www.timeanddate.com/worldclock/usa/honolulu" target="_blank" rel="noopener">Hawaii Time</a>.</strong></em></p>
+<p><em><strong>All the deadlines are at 23:59 <a href="https://www.timeanddate.com/countdown/generic?iso=20180726T235959&p0=103&msg=Hypertext+2018+paper+submission+deadline" target="_blank" rel="noopener">Hawaii Time</a>.</strong></em></p>
                     </div> <!-- /.col-md-4 -->
                 </div> <!-- /.row -->
 		
@@ -215,6 +207,31 @@ http://www.templatemo.com/tm-406-flex
             </div> <!-- /.container -->
         </div> <!-- /#services -->
 
+       <div class="content-section" id="Keynotes" name="Keynotes">
+            <div class="container">
+                <div class="row">
+                    <div class="heading-section col-md-12 text-center">
+                        <h2>Keynotes</h2>
+                    </div> <!-- /.heading-section -->
+                </div> <!-- /.row -->
+                <div class="row">
+                    <div class="team-member col-md-3 col-sm-6">
+                        <div class="member-thumb">
+                            <img src="images/member1.png" alt="">
+                            <div class="team-overlay">
+				    <h3>Seth Stephens-Davidowitz</h3>
+                                <span>XXX</span>
+                                <ul class="social">
+                                    <li><a href="#" class="fa fa-facebook"></a></li>
+                                    <li><a href="#" class="fa fa-twitter"></a></li>
+                                    <li><a href="#" class="fa fa-linkedin"></a></li>
+                                </ul>
+                            </div> <!-- /.team-overlay -->
+                        </div> <!-- /.member-thumb -->
+                    </div> <!-- /.team-member -->
+                </div> <!-- /.row -->
+            </div> <!-- /.container -->
+        </div> <!-- /#our-team -->
 
 		<div class="content-section" id="Call" name="Call">
             <div class="container">
@@ -526,21 +543,30 @@ http://www.templatemo.com/tm-406-flex
 
     <div class="tutorial" style="display:none;">       
 	    <h2>Call for Tutorial Papers</h2>
-        <p>As part of the Hypertext 2017 program, in addition, we cordially invite proposals for tutorials from active researchers and experienced tutors in academia, industry, and government agencies. Ideally, a tutorial will cover the state-of-the-art research and ideas, innovative developments, and novel applications in a specific aspect of hypertext and social media, but proposals are especially encouraged on emerging topics, related to the main conference themes.</p>
-        <p>Send your tutorial proposal (in PDF format) by email to the workshop/tutorial chairs: : <b>jessica.rubart@hs-owl.de</b> and <b>yyeliz@metu.edu.tr</b>, with the following information:</p>
-        <ul>         
-            <li>Title of the tutorial</li>
-            <li>Keywords (describing the main themes of the tutorial)</li>
-            <li>Abstract</li>
-            <li>Description of the tutorial (topics and goals)</li>
-            <li>Tutorial presenters biographies  (1-2 paragraphs per presenter)</li>
-            <li>Length of tutorial (1.5 or 3 hours)</li>
-            <li>Expected background and prerequisite of audience</li>
-            <li>Relevance of the tutorial to Hypertext 2017</li>
-            <li>A list of references/resources to be covered in the tutorial</li>
-            <li>Previous editions of the tutorial, if presenters have given similar tutorials elsewhere</li>
-        </ul>
-        <p>The accepted proposal presenters should provide comprehensive tutorial notes or slides to the tutorial audience free of charge.  </p>
+	    <p>
+	     As part of the Hypertext 2018 program, in addition, we cordially invite proposals for tutorials from active researchers and
+ experienced tutors in academia, industry, and government agencies. Ideally, a tutorial will cover the state-of-the-art
+ research and ideas, innovative developments, and novel applications in a specific aspect of hypertext and social media, but
+ proposals are especially encouraged on emerging topics, related to the main conference themes.
+</p>
+<p>
+ Send your tutorial proposal (in PDF format, no more than 2 page-long) by email to the tutorial chairs (<b>Pete Burnap -
+ BurnapP@cardiff.ac.uk</b> - and <b>Miriam Redi - miriam.redi@gmail,com</b>) with the following information:</p>
+<ul>
+  <li>  Title of the tutorial</li>
+  <li>  Keywords (describing the main themes of the tutorial)</li>
+  <li>  Abstract</li>
+  <li>  Description of the tutorial (topics and goals)</li>
+  <li>  Tutorial presenters biographies (1-2 paragraphs per presenter)</li>
+  <li>  Length of tutorial (1.5 or 3 hours)</li>
+  <li>  Expected background and prerequisite of audience</li>
+  <li>  Relevance of the tutorial to Hypertext 2018</li>
+  <li>  A list of references/resources to be covered in the tutorial</li>
+  <li>  Previous editions of the tutorial, if presenters have given similar tutorials elsewhere</li>
+  </ul>
+<p> The accepted proposal presenters should provide comprehensive tutorial notes or slides to the tutorial audience free of
+ charge.
+	    </p>
     </div>                                         
    
                     </div> <!-- /.heading-section -->
@@ -555,167 +581,10 @@ http://www.templatemo.com/tm-406-flex
                 <div class="row">
                     <div class="heading-section col-md-12 text-left">
                       <h2>Organization Commitee</h2>
-                    </div><!-- /.heading-section -->
-                    <div class="team-member col-md-3 col-sm-6">
-                        <div class="member-thumb">
-                            <img src="images/member1.jpg" alt="">
-                            <div class="team-overlay">
-                                <h3>Dongwon Lee</h3>
-				<span>General Chair</span>
-                                <ul class="social">
-                                    <li><a href="#" class="fa fa-twitter"></a></li>
-                                    <li><a href="#" class="fa fa-linkedin"></a></li>
-                                </ul>
-                            </div> <!-- /.team-overlay -->
-                        </div> <!-- /.member-thumb -->
-                    </div> <!-- /.team-member -->
 
-                    <div class="team-member col-md-3 col-sm-6">
-                        <div class="member-thumb">
-                            <img src="images/member1.jpg" alt="">
-                            <div class="team-overlay">
-                                <h3>Ingmar Weber</h3>
-                                <span>Program Co-chair</span>
-                                <ul class="social">
-                                    <li><a href="#" class="fa fa-twitter"></a></li>
-                                    <li><a href="#" class="fa fa-linkedin"></a></li>
-                                </ul>
-                            </div> <!-- /.team-overlay -->
-                        </div> <!-- /.member-thumb -->
-                    </div> <!-- /.team-member -->
-                    <div class="team-member col-md-3 col-sm-6">
-                        <div class="member-thumb">
-                            <img src="images/member1.jpg" alt="">
-                            <div class="team-overlay">
-                                <h3>Nishanth Sastry</h3>
-                                <span>Program Co-chair</span>
-                                <ul class="social">
-                                    <li><a href="#" class="fa fa-twitter"></a></li>
-                                    <li><a href="#" class="fa fa-linkedin"></a></li>
-                                </ul>
-                            </div> <!-- /.team-overlay -->
-                        </div> <!-- /.member-thumb -->
-                    </div> <!-- /.team-member -->
-                    <div class="team-member col-md-3 col-sm-6">
-                        <div class="member-thumb">
-                            <img src="images/member1.jpg" alt="">
-                            <div class="team-overlay">
-                                <h3>Nam Nguyen</h3>
-                                <span>Local Chair</span>
-                                <ul class="social">
-                                    <li><a href="#" class="fa fa-twitter"></a></li>
-                                    <li><a href="#" class="fa fa-linkedin"></a></li>
-                                </ul>
-                            </div> <!-- /.team-overlay -->
-                        </div> <!-- /.member-thumb -->
-                    </div> <!-- /.team-member -->
-                    <div class="team-member col-md-3 col-sm-6">
-                        <div class="member-thumb">
-                            <img src="images/member1.jpg" alt="">
-                            <div class="team-overlay">
-                                <h3>Thang Dinh</h3>
-                                <span>Registration Chair</span>
-                                <ul class="social">
-                                    <li><a href="#" class="fa fa-twitter"></a></li>
-                                    <li><a href="#" class="fa fa-linkedin"></a></li>
-                                </ul>
-                            </div> <!-- /.team-overlay -->
-                        </div> <!-- /.member-thumb -->
-                    </div> <!-- /.team-member -->
-                    <div class="team-member col-md-3 col-sm-6">
-                        <div class="member-thumb">
-                            <img src="images/member1.jpg" alt="">
-                            <div class="team-overlay">
-                                <h3>Miriam Redi </h3>
-                                <span>Tutorial Co-chair</span>
-                                <ul class="social">
-                                    <li><a href="#" class="fa fa-twitter"></a></li>
-                                    <li><a href="#" class="fa fa-linkedin"></a></li>
-                                </ul>
-                            </div> <!-- /.team-overlay -->
-                        </div> <!-- /.member-thumb -->
-                    </div> <!-- /.team-member -->
-                    <div class="team-member col-md-3 col-sm-6">
-                        <div class="member-thumb">
-                            <img src="images/member1.jpg" alt="">
-                            <div class="team-overlay">
-                                <h3>Pete Burnap</h3>
-                                <span>Tutorial Co-chair</span>
-                                <ul class="social">
-                                    <li><a href="#" class="fa fa-twitter"></a></li>
-                                    <li><a href="#" class="fa fa-linkedin"></a></li>
-                                </ul>
-                            </div> <!-- /.team-overlay -->
-                        </div> <!-- /.member-thumb -->
-                    </div> <!-- /.team-member -->
-                    <div class="team-member col-md-3 col-sm-6">
-                        <div class="member-thumb">
-                            <img src="images/member1.jpg" alt="">
-                            <div class="team-overlay">
-                                <h3>Haewoon Kwak</h3>
-                                <span>Workshop Co-chair</span>
-                                <ul class="social">
-                                    <li><a href="#" class="fa fa-twitter"></a></li>
-                                    <li><a href="#" class="fa fa-linkedin"></a></li>
-                                </ul>
-                            </div> <!-- /.team-overlay -->
-                        </div> <!-- /.member-thumb -->
-                    </div> <!-- /.team-member -->
-                    <div class="team-member col-md-3 col-sm-6">
-                        <div class="member-thumb">
-                            <img src="images/member1.jpg" alt="">
-                            <div class="team-overlay">
-                                <h3>Fabricio Benevenuto</h3>
-                                <span>Data Chair</span>
-                                <ul class="social">
-                                    <li><a href="#" class="fa fa-twitter"></a></li>
-                                    <li><a href="#" class="fa fa-linkedin"></a></li>
-                                </ul>
-                            </div> <!-- /.team-overlay -->
-                        </div> <!-- /.member-thumb -->
-                    </div> <!-- /.team-member -->
-                    <div class="team-member col-md-3 col-sm-6">
-                        <div class="member-thumb">
-                            <img src="images/member1.jpg" alt="">
-                            <div class="team-overlay">
-                                <h3>David Millard</h3>
-                                <span>Outreach Chair</span>
-                                <ul class="social">
-                                    <li><a href="#" class="fa fa-twitter"></a></li>
-                                    <li><a href="#" class="fa fa-linkedin"></a></li>
-                                </ul>
-                            </div> <!-- /.team-overlay -->
-                        </div> <!-- /.member-thumb -->
-                    </div> <!-- /.team-member -->
-                    <div class="team-member col-md-3 col-sm-6">
-                        <div class="member-thumb">
-                            <img src="images/member1.jpg" alt="">
-                            <div class="team-overlay">
-                                <h3>Sagar Joglekar</h3>
-                                <span>Web Co-Chair</span>
-                                <ul class="social">
-                                    <li><a href="#" class="fa fa-twitter"></a></li>
-                                    <li><a href="#" class="fa fa-linkedin"></a></li>
-                                </ul>
-                            </div> <!-- /.team-overlay -->
-                        </div> <!-- /.member-thumb -->
-                    </div> <!-- /.team-member -->
-                    <div class="team-member col-md-3 col-sm-6">
-                        <div class="member-thumb">
-                            <img src="images/member1.jpg" alt="">
-                            <div class="team-overlay">
-                                <h3>Kiran Garimella</h3>
-                                <span>Web Co-Chair</span>
-                                <ul class="social">
-                                    <li><a href="#" class="fa fa-twitter"></a></li>
-                                    <li><a href="#" class="fa fa-linkedin"></a></li>
-                                </ul>
-                            </div> <!-- /.team-overlay -->
-                        </div> <!-- /.member-thumb -->
-                    </div> <!-- /.team-member -->
 
                         <p>
-                          <!--li> <b>General Chair</b> Dongwon Lee dongwon@psu.edu </li>
+                          <li> <b>General Chair</b> Dongwon Lee dongwon@psu.edu </li>
                           <li> <b>Local Chair</b> Nam Nguyen npnguyen@towson.edu </li>
                           <li> <b>Program Co-chair</b> Ingmar Weber iweber@qf.org.qa</li>
                           <li> <b>Program Co-chair</b>        Nishanth Sastry nishanth.sastry@kcl.ac.uk</li>
@@ -726,9 +595,9 @@ http://www.templatemo.com/tm-406-flex
                           <li> <b>Data Chair</b> Fabricio Benevenuto fabricio@dcc.ufmg.br</li>
                           <li> <b>Outreach Co-chair</b> David Millard dem@ecs.soton.ac.uk</li>
                           <li> <b>Web Co-chair</b> Sagar Joglekar</li>
-                          <li> <b>Web Co-chair</b> Kiran Garimella </li-->
+                          <li> <b>Web Co-chair</b> Kiran Garimella </li>
                         </p>
- 
+                    </div><!-- /.heading-section --> 
                 </div> <!-- /.row -->
 
             </div> <!-- /.container -->
