fixed mobile layout issues

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ http://www.templatemo.com/tm-406-flex
                                         <li><a href="#Program">Program</a></li>
 
                                         <!--li><a href="#" class="fa fa-twitter"></a></li-->
-                                        <li><a href="https://twitter.com/ACMHT" target="_blank"><img src="images/twitter.png" width="36px" height="36px"></a></li>
+                                        <!--li><a href="https://twitter.com/ACMHT" target="_blank"><img src="images/twitter.png" width="36px" height="36px"></a></li-->
                                     </ul>
                                 </div> <!-- /.main-menu -->
                             </div> <!-- /.row -->
@@ -161,7 +161,6 @@ http://www.templatemo.com/tm-406-flex
 
 
 	<div class="content-section" id="About">
-		<a name="About"></a>
             <div class="container">
 
 	                <div class="row">
