updated pc with emails in mailto

--- a/index.html
+++ b/index.html
@@ -583,18 +583,18 @@ http://www.templatemo.com/tm-406-flex
 
 
                         <p>
-                          <li> <b>General Chair</b> Dongwon Lee dongwon@psu.edu </li>
-                          <li> <b>Local Chair</b> Nam Nguyen npnguyen@towson.edu </li>
-                          <li> <b>Program Co-chair</b> Ingmar Weber iweber@qf.org.qa</li>
-                          <li> <b>Program Co-chair</b>        Nishanth Sastry nishanth.sastry@kcl.ac.uk</li>
-                          <li> <b>Registration Chair</b> Thang Dinh tndinh@vcu.edu</li>
-                          <li> <b>Tutorial Co-chair</b> Miriam Redi miriam.redi@gmail.com</li>
-                          <li> <b>Tutorial Co-chair</b> Pete Burnap BurnapP@cardiff.ac.uk</li>
-                          <li> <b>Workshop Co-chair</b> Haewoon Kwak haewoon.kwak@gmail.com</li>
-                          <li> <b>Data Chair</b> Fabricio Benevenuto fabricio@dcc.ufmg.br</li>
-                          <li> <b>Outreach Co-chair</b> David Millard dem@ecs.soton.ac.uk</li>
-                          <li> <b>Web Co-chair</b> Sagar Joglekar</li>
-                          <li> <b>Web Co-chair</b> Kiran Garimella </li>
+                          <li> <b>General Chair</b> <a href=mailto:dongwon@psu.edu>Dongwon Lee</a> </li>
+                          <li> <b>Local Chair</b> <a href=mailto:npnguyen@towson.edu> Nam Nguyen</a> </li>
+                          <li> <b>Program Co-chair</b> <a href=mailto:iweber@qf.org.qa> Ingmar Weber</a></li>
+                          <li> <b>Program Co-chair</b> <a href=mailto:nishanth.sastry@kcl.ac.uk>Nishanth Sastry</a></li>
+                          <li> <b>Registration Chair</b> <a href=mailto:tndinh@vcu.edu>Thang Dinh</a></li>
+                          <li> <b>Tutorial Co-chair</b> <a href=mailto:miriam.redi@gmail.com>Miriam Redi</a></li>
+                          <li> <b>Tutorial Co-chair</b> <a href=mailto:BurnapP@cardiff.ac.uk>Pete Burnap</a></li>
+                          <li> <b>Workshop Co-chair</b> <a href=mailto:haewoon.kwak@gmail.com>Haewoon Kwak</a></li>
+                          <li> <b>Data Chair</b> <a href=mailto:fabricio@dcc.ufmg.br>Fabricio Benevenuto</a></li>
+                          <li> <b>Outreach Co-chair</b> <a href=mailto:dem@ecs.soton.ac.uk>David Millard</a></li>
+                          <li> <b>Web Co-chair</b> <a href=mailto:sagar.joglekar@kcl.ac.uk>Sagar Joglekar</a></li>
+                          <li> <b>Web Co-chair</b> <a href=mailto:kiran.garimella@aalto.fi>Kiran Garimella</a> </li>
                         </p>
                     </div><!-- /.heading-section -->
                 </div> <!-- /.row -->
