--- a/index.html
+++ b/index.html
@@ -612,9 +612,9 @@ http://www.templatemo.com/tm-406-flex
 				</div>
                 <div class="row">
                     <div class="col-md-12">
-				        <div class="googlemap-wrapper">
+			<!--div class="googlemap-wrapper">
                             <div id="map_canvas" class="map-canvas"></div>
-                        </div> <!-- /.googlemap-wrapper -->
+                        </div--> <!-- /.googlemap-wrapper -->
 
                         <h3> Venue </h3>
                         <p>
@@ -673,10 +673,9 @@ http://www.templatemo.com/tm-406-flex
         <script src="js/main.js"></script>
 
         <!-- Google Map -->
-        <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+        <!--script src="http://maps.google.com/maps/api/js?sensor=true"></script>
         <script src="js/vendor/jquery.gmap3.min.js"></script>
 
-        <!-- Google Map Init-->
         <script type="text/javascript">
             jQuery(function($){
                 $('#map_canvas').gmap3({
@@ -692,12 +691,9 @@ http://www.templatemo.com/tm-406-flex
                     }
                 });
 
-                /* Simulate hover on iPad
-                 * http://stackoverflow.com/questions/2851663/how-do-i-simulate-a-hover-with-a-touch-in-touch-enabled-browsers
-                 --------------------------------------------------------------------------------------------------------------*/
                 $('body').bind('touchstart', function() {});
             });
-        </script>
+        </script-->
         <!-- templatemo 406 flex -->
     </body>
 </html>
