updated dates and fixed list indentation

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ http://www.templatemo.com/tm-406-flex
                                     <h2>The 29th ACM Conference on
 									Hypertext and Social Media</h2>
                                     <p>Baltimore, Maryland</p>
-                                    <p>July 4 - 7, 2018</p>
+                                    <p>July 9 - 12, 2018</p>
                                     <a href="#About" class="slider-btn">Important Dates</a>
                                 </div>
                             </li>
@@ -174,6 +174,7 @@ http://www.templatemo.com/tm-406-flex
                           stories with data or linking people with resources. HT2017 will focus on the role of links, linking,
                           hypertext and hyperlink theory on the web and beyond, as a foundation for approaches and practices in the wider community.
                           Therefore, HT2017 has the following tracks:
+			  <ul>
                           <li> Hyper-Society covers digital humanities and connecting/connected people </li>
                           <li> Hyper-Data covers connected things on the documents, Web, and IoT </li>
                           <li> Hyper-Media covers connected traditional and non-traditional media </li>
@@ -182,15 +183,16 @@ http://www.templatemo.com/tm-406-flex
                           <li>Adaptive Hypertext and Recommendations (Linking resources)</li>
                           <li>News and Storytelling (Linking stories)</li>
                           <li>Demonstrations</li>
+			  </ul>
                         </p>
                     </div> <!-- /.col-md-8 -->
                     <div class="col-md-4 col-sm-6">
 									<h2>Important dates</h2>
-<p><span><b>Submission deadline: 14th June 2017</b></span><br />
-<span>Acceptance announcement: 3rd July 2017</span><br />
-<span>Registration ends (Early bird rate): 24th July 2017</span><br />
-<span>Camera ready due:  21 July 2017</span><br />
-<p><strong>Conference:</strong> 13-15 September 2017</p>
+<p><span><b>Abstract submission deadline: 26th January 2018</b></span><br />
+<p><span><b>Paper submission deadline: 2nd February 2018</b></span><br />
+<span>Acceptance notification: 2nd April 2018</span><br />
+<span>Camera ready due:  1st May 2018</span><br />
+<p><strong>Conference:</strong> 9-12 July 2018</p>
 <p><em><strong>All the deadlines are at 23:59 <a href="https://www.timeanddate.com/countdown/generic?iso=20180726T235959&p0=103&msg=Hypertext+2018+paper+submission+deadline" target="_blank" rel="noopener">Hawaii Time</a>.</strong></em></p>
                     </div> <!-- /.col-md-4 -->
                 </div> <!-- /.row -->
@@ -221,9 +223,10 @@ http://www.templatemo.com/tm-406-flex
 				    <h3>Seth Stephens-Davidowitz</h3>
                                 <span>XXX</span>
                                 <ul class="social">
-                                    <li><a href="#" class="fa fa-facebook"></a></li>
-                                    <li><a href="#" class="fa fa-twitter"></a></li>
-                                    <li><a href="#" class="fa fa-linkedin"></a></li>
+				    <li><a href="http://sethsd.com/" class="fa fa-globe"></a></li>
+                                    <li><a href="https://twitter.com/seths_d" class="fa fa-twitter"></a></li>
+                                    <li><a href="https://www.linkedin.com/in/seth-stephens-davidowitz-b7053918/" class="fa fa-linkedin"></a></li>
+                                    <!--li><a href="" class="fa fa-linkedin"></a></li-->
                                 </ul>
                             </div> <!-- /.team-overlay -->
                         </div> <!-- /.member-thumb -->
@@ -583,18 +586,18 @@ http://www.templatemo.com/tm-406-flex
 
 
                         <p>
-                          <li> <b>General Chair</b> <a href=mailto:dongwon@psu.edu>Dongwon Lee</a> </li>
-                          <li> <b>Local Chair</b> <a href=mailto:npnguyen@towson.edu> Nam Nguyen</a> </li>
-                          <li> <b>Program Co-chair</b> <a href=mailto:iweber@qf.org.qa> Ingmar Weber</a></li>
-                          <li> <b>Program Co-chair</b> <a href=mailto:nishanth.sastry@kcl.ac.uk>Nishanth Sastry</a></li>
-                          <li> <b>Registration Chair</b> <a href=mailto:tndinh@vcu.edu>Thang Dinh</a></li>
-                          <li> <b>Tutorial Co-chair</b> <a href=mailto:miriam.redi@gmail.com>Miriam Redi</a></li>
-                          <li> <b>Tutorial Co-chair</b> <a href=mailto:BurnapP@cardiff.ac.uk>Pete Burnap</a></li>
-                          <li> <b>Workshop Co-chair</b> <a href=mailto:haewoon.kwak@gmail.com>Haewoon Kwak</a></li>
-                          <li> <b>Data Chair</b> <a href=mailto:fabricio@dcc.ufmg.br>Fabricio Benevenuto</a></li>
-                          <li> <b>Outreach Co-chair</b> <a href=mailto:dem@ecs.soton.ac.uk>David Millard</a></li>
-                          <li> <b>Web Co-chair</b> <a href=mailto:sagar.joglekar@kcl.ac.uk>Sagar Joglekar</a></li>
-                          <li> <b>Web Co-chair</b> <a href=mailto:kiran.garimella@aalto.fi>Kiran Garimella</a> </li>
+                          <li> <b>General Chair</b> <a href="http://nike.psu.edu/dongwon/" target=_blank>Dongwon Lee</a> </li>
+                          <li> <b>Local Chair</b> <a href="https://www.towson.edu/fcsm/departments/computerinfosci/facultystaff/nnguyen.html" target=_blank>Nam Nguyen</a> </li>
+                          <li> <b>Program Co-chair</b> <a href="https://ingmarweber.de/" target=_blank>Ingmar Weber</a></li>
+                          <li> <b>Program Co-chair</b> <a href="https://nms.kcl.ac.uk/nishanth.sastry/" target=_blank>Nishanth Sastry</a></li>
+                          <li> <b>Registration Chair</b> <a href="http://www.people.vcu.edu/~tndinh/" target=_blank>Thang Dinh</a></li>
+                          <li> <b>Tutorial Co-chair</b> <a href="http://www.visionresearchwitch.com/" target=_blank>Miriam Redi</a></li>
+                          <li> <b>Tutorial Co-chair</b> <a href="https://burnap.org/" target=_blank>Pete Burnap</a></li>
+                          <li> <b>Workshop Co-chair</b> <a href="http://haewoon.io/" target=_blank>Haewoon Kwak</a></li>
+                          <li> <b>Data Chair</b> <a href="http://homepages.dcc.ufmg.br/~fabricio/" target=_blank>Fabricio Benevenuto</a></li>
+                          <li> <b>Outreach Co-chair</b> <a href="http://www.ecs.soton.ac.uk/people/dem" target=_blank>David Millard</a></li>
+                          <li> <b>Web Co-chair</b> <a href="http://sagarjoglekar.github.io/" target=_blank>Sagar Joglekar</a></li>
+                          <li> <b>Web Co-chair</b> <a href="https://users.ics.aalto.fi/kiran/" target=_blank>Kiran Garimella</a> </li>
                         </p>
                     </div><!-- /.heading-section -->
                 </div> <!-- /.row -->
