made some of the simple stuff suggested by dongwon

--- a/index.html
+++ b/index.html
@@ -121,12 +121,13 @@ http://www.templatemo.com/tm-406-flex
                                     <ul class="menu-first">
                                         <!--li class="active"><a href="#">Home</a></li-->
                                         <li><a href="#About">About</a></li>
+                                        <li><a href="#About">Important Dates</a></li>
 					<li><a href="#News">News</a></li>
                                         <li><a href="#Keynotes">Keynotes</a></li>
                                         <li><a href="#Call">Call For papers</a></li>
-                                        <li><a href="#Commitee">Organization Commitee</a></li>
+                                        <li><a href="#Commitee">Organization</a></li>
                                         <li><a href="#Venue">Venue</a></li>
-                                        <li><a href="#Program">Program</a></li>
+                                        <!--li><a href="#Program">Program</a></li-->
 
                                         <!--li><a href="#" class="fa fa-twitter"></a></li-->
                                         <!--li><a href="https://twitter.com/ACMHT" target="_blank"><img src="images/twitter.png" width="36px" height="36px"></a></li-->
@@ -150,7 +151,7 @@ http://www.templatemo.com/tm-406-flex
                                     <h2>The 29th ACM Conference on
 									Hypertext and Social Media</h2>
                                     <p>Baltimore, Maryland</p>
-                                    <p>July 9 - 12, 2018</p>
+                                    <p>9-12 July, 2018</p>
                                     <a href="#About" class="slider-btn">Important Dates</a>
                                 </div>
                             </li>
@@ -189,12 +190,12 @@ http://www.templatemo.com/tm-406-flex
                     </div> <!-- /.col-md-8 -->
                     <div class="col-md-4 col-sm-6">
 									<h2>Important dates</h2>
-<p><span><b>Abstract submission deadline: 26th January 2018</b></span><br />
-<p><span><b>Paper submission deadline: 2nd February 2018</b></span><br />
+									<p><span><b>Abstract submission deadline: <a href="https://www.timeanddate.com/countdown/generic?iso=20180126T235959&p0=103&msg=Hypertext+2018+abstract+submission+deadline&font=cursive">26th January 2018</a></b></span><br />
+									<p><span><b>Paper submission deadline: <a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180202T235959&p0=256&msg=Hypertext+2018+paper+submission+deadline&font=cursive">2nd February 2018</a></b></span><br />
 <span>Acceptance notification: 2nd April 2018</span><br />
 <span>Camera ready due:  1st May 2018</span><br />
 <p><strong>Conference:</strong> 9-12 July 2018</p>
-<p><em><strong>All the deadlines are at 23:59 <a href="https://www.timeanddate.com/countdown/generic?iso=20180726T235959&p0=103&msg=Hypertext+2018+paper+submission+deadline" target="_blank" rel="noopener">Hawaii Time</a>.</strong></em></p>
+<p><em><strong>All the deadlines are at 23:59 <a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180202T235959&p0=256&msg=Hypertext+2018+paper+submission+deadline&font=cursive" target="_blank" rel="noopener">Hawaii Time</a>.</strong></em></p>
                     </div> <!-- /.col-md-4 -->
                 </div> <!-- /.row -->
 
@@ -621,7 +622,8 @@ http://www.templatemo.com/tm-406-flex
 
                         <h3> Lodging </h3>
                         <p>
-                            <li>  Sheraton Baltimore North , 903 Dulaney Valley Road , Towson, MD 21252 , 888-627-7147 </li>
+			<li></li>
+			<li>  <a href="http://www.starwoodhotels.com/sheraton/property/overview/index.html?propertyID=33&SWAQ=958P">Sheraton Baltimore North</a>, Address: 903 Dulaney Valley Road , Towson, MD 21252 , 888-627-7147 </li>
                             <li> Towson university student dorm (more info later) </li>
                         </p>
 
