Add twitter widget

--- a/index.html
+++ b/index.html
@@ -189,14 +189,21 @@ http://www.templatemo.com/tm-406-flex
                         </p>
                     </div> <!-- /.col-md-8 -->
                     <div class="col-md-4 col-sm-6">
-									<h2>Important dates</h2>
-									<p><span><b>Abstract submission deadline: <a href="https://www.timeanddate.com/countdown/generic?iso=20180126T235959&p0=103&msg=Hypertext+2018+abstract+submission+deadline&font=cursive">26th January 2018</a></b></span><br />
-									<p><span><b>Paper submission deadline: <a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180202T235959&p0=256&msg=Hypertext+2018+paper+submission+deadline&font=cursive">2nd February 2018</a></b></span><br />
-<span>Acceptance notification: 2nd April 2018</span><br />
-<span>Camera ready due:  1st May 2018</span><br />
-<p><strong>Conference:</strong> 9-12 July 2018</p>
-<p><em><strong>All the deadlines are at 23:59 <a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180202T235959&p0=256&msg=Hypertext+2018+paper+submission+deadline&font=cursive" target="_blank" rel="noopener">Hawaii Time</a>.</strong></em></p>
+		<h2>Important dates</h2>
+		<p><span><b>Abstract submission deadline: <a href="https://www.timeanddate.com/countdown/generic?iso=20180126T235959&p0=103&msg=Hypertext+2018+abstract+submission+deadline&font=cursive">26th January 2018</a></b></span><br />
+		<p><span><b>Paper submission deadline: <a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180202T235959&p0=256&msg=Hypertext+2018+paper+submission+deadline&font=cursive">2nd February 2018</a></b></span><br />
+                        <span>Acceptance notification: 2nd April 2018</span><br />
+                        <span>Camera ready due:  1st May 2018</span><br />
+                        <p><strong>Conference:</strong> 9-12 July 2018</p>
+                        <p><em><strong>All the deadlines are at 23:59 <a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180202T235959&p0=256&msg=Hypertext+2018+paper+submission+deadline&font=cursive" target="_blank" rel="noopener">Hawaii Time</a>.</strong></em></p>
                     </div> <!-- /.col-md-4 -->
+
+
+                     <div class="col-md-4 col-sm-6">
+                        <a class="twitter-timeline" href="https://twitter.com/ACMHT" data-width="400" data-height="600">Tweets by ACMHT</a>
+                        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+                     </div> <!-- /.col-md-4 -->
+
                 </div> <!-- /.row -->
 
 
@@ -215,7 +222,8 @@ http://www.templatemo.com/tm-406-flex
                 <div class="row">
                     <div class="heading-section col-md-12 text-left">
                         <h2>News</h2>
-						<h3>Coming soon!</h3>
+
+                            <h3>Coming soon!</h3>
 
                     </div> <!-- /.heading-section -->
                 </div> <!-- /.row -->
@@ -260,7 +268,7 @@ http://www.templatemo.com/tm-406-flex
 					The <b>ACM Conference on Hypertext and Social Media (HT)</b> provides a premium single-track platform for high quality peer-reviewed research on theory, systems and applications of hypertext and social media. It is concerned with all aspects of modern hypertext and social media, including adaptation, personalization, recommendations, user modeling, linked data and semantic web, dynamic and computed hypertext, and its application in digital humanities, as well as with interplay between those aspects such as linking stories with data or linking people with resources.
                                         </p>
                                         <p>
-					We invite high quality submissions relating to all the above aspects of hypertext and social media, but encourage submissions to align themselves with three broad themes: 
+					We invite high quality submissions relating to all the above aspects of hypertext and social media, but encourage submissions to align themselves with three broad themes:
 					    <!--role of links, linking, hypertext and hyperlink theory on the web and beyond, as a foundation for approaches and practices in the wider community. Therefore, HT2018 has the following tracks:-->
                                         </p>
                                             <ul>
@@ -276,8 +284,8 @@ http://www.templatemo.com/tm-406-flex
                                                 <li>Demonstrations</li-->
                                             </ul>
 				<p>
-				Accepted papers will appear in the Hypertext 2018 Conference Proceedings that will be published by ACM and additionally be made available through the ACM Digital Library. 
-				Selected papers will be considered for a fast track publication in ACM Transactions on the Web. As traditional, one paper will be selected for the Douglas Englebart best paper award. 
+				Accepted papers will appear in the Hypertext 2018 Conference Proceedings that will be published by ACM and additionally be made available through the ACM Digital Library.
+				Selected papers will be considered for a fast track publication in ACM Transactions on the Web. As traditional, one paper will be selected for the Douglas Englebart best paper award.
 				</p>
 
 				<p>
